Add Linux internals category page and update header
Signed-off-by: Joel Fernandes <joel@linuxinternals.org>

--- a/_includes/custom/header.html
+++ b/_includes/custom/header.html
@@ -7,7 +7,7 @@
 </div>
 <div style="float:left;" class="hnav">
  <a href="/joel">About me</a><br>
- <a href="/blog/archives/">Articles</a><br>
+ <a href="/linuxinternals/">Linux Internals Articles</a><br>
  <a href="/resources">Talks and resources</a><br>
 </div>
 <div style="float:right;">
