--- a/_includes/custom/header.html
+++ b/_includes/custom/header.html
@@ -16,7 +16,7 @@
 </div>
 
 <div style="position:absolute; top: 170px" class="hnavtitle">
-<a>Open Source is how I roll.</a>
+<a>The devil is in the details.</a>
 <!-- a href="http://www.meetup.com/LinuxInternals-org-Embedded-Linux-Training/">Join the internals meetup! -->
 <!-- a href="http://www.meetup.com/LinuxInternals-org-Embedded-Linux-Training/">Join the internals meetup! -->
 </div>
