--- a/_includes/custom/header.html
+++ b/_includes/custom/header.html
@@ -12,12 +12,14 @@
  <a href="/resources">Talks and resources</a><br>
 </div>
 <div style="float:right;">
-<img src="/images/peng.png" height=150 width=150>
+<img src="/images/peng.png" height=100 width=100>
 </div>
 
-<div style="position:absolute; top: 170px" class="hnavtitle">
-<a>The devil is in the details.</a>
+<!-- div style="position:absolute; top: 170px" class="hnavtitle" -->
+<!-- a><font size="2">If you solve world hunger, and make a driver that cures people of cancer, by all means enable it by default.
+— Linus Torvalds</font></a -->
 <!-- a href="http://www.meetup.com/LinuxInternals-org-Embedded-Linux-Training/">Join the internals meetup! -->
 <!-- a href="http://www.meetup.com/LinuxInternals-org-Embedded-Linux-Training/">Join the internals meetup! -->
-</div>
+<!-- /div -->
+
 </div>
