--- a/_layouts/teach_page.html
+++ b/_layouts/teach_page.html
@@ -33,6 +33,9 @@ layout: default
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
+  <h3>Student Testimonials</h3>
+  <p style="border:3px; border-style:solid; border-color:green; padding: 1em; font-size: 75%;">
+  <b>Samuel from MSU</b>
 I'm a 4th year student at Michigan State University majoring in Computer
 Science and Joel have been extremely helpful tutoring me in my Computer
 Networks class. I am so happy I stumbled across Joel after numerous failed
@@ -44,5 +47,7 @@ timely manner and it resulted in me getting a 100% and being able to pass the
 class. He is very experienced and knowledgeable! He keeps lessons effective,
 engaging, and fun. If anyone is looking for a tutor for any computer science
 subjects, I highly recommend Joel to be your tutor.
+  </p>
 </aside>
+
 {% endunless %}
