--- a/_layouts/teach_page.html
+++ b/_layouts/teach_page.html
@@ -35,7 +35,7 @@ layout: default
 <aside class="sidebar">
   <h3>Student Testimonials</h3>
   <p style="border:3px; border-style:solid; border-color:green; padding: 1em; font-size: 75%;">
-  <h4>Samuel from MSU</h4>
+  <b>Samuel from MSU</b><br>
 I'm a 4th year student at Michigan State University majoring in Computer
 Science and Joel have been extremely helpful tutoring me in my Computer
 Networks class. I am so happy I stumbled across Joel after numerous failed
