--- a/_layouts/teach_page.html
+++ b/_layouts/teach_page.html
@@ -48,6 +48,14 @@ class. He is very experienced and knowledgeable! He keeps lessons effective,
 engaging, and fun. If anyone is looking for a tutor for any computer science
 subjects, I highly recommend Joel to be your tutor.
   </p>
+  <br>
+  <p style="border:3px; border-style:solid; border-color:green; padding: 1em; font-size: 75%;">
+  <b>Keith from Wyzant<br>
+  Great with Linux<br>
+  Great teacher and is very patient. We went over bash scripting and logs and I
+  learned a lot. I would highly recommend<br>
+  </p>
+
 </aside>
 
 {% endunless %}
