--- a/_layouts/teach_page.html
+++ b/_layouts/teach_page.html
@@ -50,10 +50,9 @@ subjects, I highly recommend Joel to be your tutor.
   </p>
   <br>
   <p style="border:3px; border-style:solid; border-color:green; padding: 1em; font-size: 75%;">
-  <b>Keith from Wyzant<br>
-  Great with Linux<br>
-  Great teacher and is very patient. We went over bash scripting and logs and I
-  learned a lot. I would highly recommend<br>
+  <b>Yee Chee</b><br>
+  Super knowledgeable kind tutor:
+  He gave me useful tips about learning data structures and java, including the right book and IDE. Gave me confidence to map my own study plan and most importantly, really encouraged me to go for it when I was so lost about how to go about learning these topics.
   </p>
 
 </aside>
