--- a/_includes/post/categories.html
+++ b/_includes/post/categories.html
@@ -1,3 +1,22 @@
+<!--
+  Borrowed from: https://blog.webjeda.com/jekyll-categories/
+  Added on 1/29/2023
+-->
+<div class="post-categories">
+  {% if post %}
+    {% assign categories = post.categories %}
+  {% else %}
+    {% assign categories = page.categories %}
+  {% endif %}
+  {% for category in categories %}
+  <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+  {% unless forloop.last %}&nbsp;{% endunless %}
+  {% endfor %}
+</div>
+
+<!--
+Commented out on 1/29/2023:
+
 {% capture category %}{% if post %}{{ post.categories | category_links | size }}{% else %}{{ page.categories | category_links | size }}{% endif %}{% endcapture %}
 {% unless category == '0' %}
 <span class="categories">
@@ -6,5 +25,6 @@
   {% else %}
     {{ page.categories | category_links }}
   {% endif %}
-</span>
+  </span>
 {% endunless %}
+ -->
