Fix pagination issues referring to jekyll docs https://jekyllrb.com/docs/pagination/
Also adjust color of next/previous links, and fix config.yml

Signed-off-by: Joel Fernandes (Google) <joel@joelfernandes.org>

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1409,7 +1409,7 @@ article>footer .byline ~ .categories:before {
 
 #content div.pagination a {
     text-decoration: none;
-    color: #aaa
+    color: #000
 }
 
 #content div.pagination a.prev {
