Fix mobile li padding (was 15px, now 2px)

--- a/preview/page.css
+++ b/preview/page.css
@@ -279,8 +279,8 @@ iframe.sitenav {
 		width: 100%;
 	}
 	li {
-		/* a touch more padding needed */
-		padding-top: 15px;
+		/* minimal padding on mobile */
+		padding-top: 2px;
 	}
 	div.recent,
 	div.nav {
