Change pre background to light blue (#e8f4fc)

--- a/page.css
+++ b/page.css
@@ -203,7 +203,7 @@ pre {
 	font-family: Courier, "Courier New", mono;
 	font-size: 12px;
 	color: #000000;
-	background-color: #ffffdd;
+	background-color: #e8f4fc;
 	padding: 8px 16px 8px 8px;
 	margin-left: 20px;
 	border: #000000;
