--- a/blog/css/syntax.css
+++ b/blog/css/syntax.css
@@ -1,4 +1,4 @@
-.highlight  { background: #ffffff; }
+.highlight, .highlight pre, .highlight code, div.highlighter-rouge, div.highlighter-rouge pre { background: #e8f4fc !important; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
