Make pre blocks full-width (display: block)

--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -180,11 +180,11 @@ pre {
 	border: #000000;
 	border-style: dashed;
 	border-width: 1px;
-	display: inline-block;
+	display: block;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	line-height: 1.0em;
-	overflow-x: scroll;
+	overflow-x: auto;
 	max-width: 680px;
 }
 
