--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -181,6 +181,7 @@ pre {
 	border-style: dashed;
 	border-width: 1px;
 	display: block;
+	width: calc(100% - 40px);
 	margin-top: 0px;
 	margin-bottom: 0px;
 	line-height: 1.0em;
