--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -182,6 +182,7 @@ pre {
 	border-style: dashed;
 	border-width: 1px;
 	display: block;
+	width: calc(100% - 40px) !important;
 	box-sizing: border-box;
 	margin-top: 0px;
 	margin-bottom: 0px;
