--- a/css/main.css
+++ b/css/main.css
@@ -176,16 +176,18 @@ pre {
 	color: #000000;
 	background-color: #e8f4fc;
 	padding: 8px 16px 8px 8px;
-	margin-left: 20px;
+	margin-left: 0;
+	margin-right: 0;
 	border: #000000;
 	border-style: dashed;
 	border-width: 1px;
-	display: inline-block;
+	display: block;
+	width: 100% !important;
+	box-sizing: border-box;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	line-height: 1.0em;
-	overflow-x: scroll;
-	max-width: 680px;
+	overflow-x: auto;
 }
 
 pre.narrow {
@@ -328,6 +330,23 @@ pre code, .highlight code {
   background-color: transparent !important;
   border: none !important;
   padding: 0 !important;
+}
+
+/* Make code block wrappers full-width */
+div.highlighter-rouge {
+  display: block !important;
+  width: 100% !important;
+  max-width: none !important;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+div.highlight, pre.highlight {
+  display: block !important;
+  width: 100% !important;
+  max-width: none !important;
+  box-sizing: border-box;
 }
 
 /* @media only screen and (max-device-width: 480px) { */
