--- a/css/main.css
+++ b/css/main.css
@@ -174,11 +174,11 @@ pre {
 	font-family: Courier, "Courier New", mono;
 	font-size: 12px;
 	color: #000000;
-	background-color: #e8f4fc;
+	background-color: transparent !important;
 	padding: 8px 16px 8px 8px;
 	margin-left: 0;
 	margin-right: 0;
-	border: none;
+	border: none !important;
 	display: block;
 	width: 100% !important;
 	box-sizing: border-box;
