Simplify sidebar nav: Home, Blog, Resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,8 @@
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
 <a href="/">Home</a><br>
-<a href="/bio.html">Bio</a><br>
-<a href="/linuxperf.html">Linux Perf</a><br>
-<a href="/rcu.html">RCU</a><br>
-<a href="/tracing.html">Tracing</a><br>
-<a href="/schedulers.html">Schedulers</a><br>
-<a href="/memory-ordering.html">Memory Ordering</a><br>
-<a href="/gpu.html">GPU Drivers</a><br>
-<a href="/resources/">Talks</a><br>
-<a href="/joel/">Resume</a><br>
+<a href="/categories.html">Blog</a><br>
+<a href="/joel/joel-resume.pdf">Resume</a><br>
 </div>
 
 <div class="recent">
@@ -34,9 +27,7 @@
 <li class="recent">{{ post.date | date: "%Y-%m-%d" }} &raquo;<br><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
-<p><a href="/">All posts</a><br>
-<a href="/bio.html">About</a><br>
-<a href="/feed.xml">RSS</a></p>
+<p><a href="/">All posts</a></p>
 </div>
 
 <div class="site">
