--- a/css/main.css
+++ b/css/main.css
@@ -174,14 +174,12 @@ pre {
 	font-family: Courier, "Courier New", mono;
 	font-size: 12px;
 	color: #000000;
-	background-color: #e8f4fc;
+	background-color: transparent !important;
 	padding: 8px 16px 8px 8px;
-	margin-left: 0;
-	margin-right: 0;
-	border: #000000;
-	border-style: dashed;
-	border-width: 1px;
-	display: block;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	border: none !important;
+	display: block !important;
 	width: 100% !important;
 	box-sizing: border-box;
 	margin-top: 0px;
@@ -338,8 +336,10 @@ div.highlighter-rouge {
   width: 100% !important;
   max-width: none !important;
   box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 0;
+  margin-right: 0;
+  border: 1px dashed #000000;
+  background-color: #e8f4fc;
 }
 
 div.highlight, pre.highlight {
@@ -347,6 +347,7 @@ div.highlight, pre.highlight {
   width: 100% !important;
   max-width: none !important;
   box-sizing: border-box;
+  background-color: transparent;
 }
 
 /* @media only screen and (max-device-width: 480px) { */
