--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,10 @@ layout: default
 
 <p><a href="/">&laquo; Back to Home</a></p>
 
+<hr>
+<h2>Comments</h2>
+{% include disqus.html %}
+
 <div class="footer">
 <div class="contact">
 <p>Joel Fernandes · <a href="https://twitter.com/joel_linux">Twitter</a> · <a href="https://www.linkedin.com/in/joelagnel">LinkedIn</a> · <a href="/about-site.html">About site</a></p>
