Switch to utterances for comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
 
 <hr>
 <h2>Comments</h2>
-{% include disqus.html %}
+{% include comments.html %}
 
 <div class="footer">
 <div class="contact">
