Add personal posts section
- Personal posts have category 'personal'
- Personal posts filtered out from main blog list and categories
- New Personal Posts section on home page
- New personal.html page listing all personal posts
- Personal Posts link added to left nav
- Recent personal posts shown separately in right sidebar
- Added dummy weather post for Charlottesville

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,37 @@
 <a href="/memory-ordering.html">Memory Ordering</a><br>
 <a href="/gpu.html">GPU Drivers</a><br>
 <a href="/resources/">Talks</a><br>
+<a href="/personal.html">Personal Posts</a><br>
 <a href="/joel/">Resume</a><br>
 </div>
 
 <div class="recent">
 <p class="navhdr">Recent posts:</p>
 <ul>
-{% for post in site.posts limit:10 %}
+{% assign count = 0 %}
+{% for post in site.posts %}
+{% unless post.categories contains "personal" %}
+{% if count < 10 %}
 <li class="recent">{{ post.date | date: "%Y-%m-%d" }} &raquo;<br><a href="{{ post.url }}">{{ post.title }}</a></li>
+{% assign count = count | plus: 1 %}
+{% endif %}
+{% endunless %}
 {% endfor %}
 </ul>
+
+<p class="navhdr">Recent personal:</p>
+<ul>
+{% assign pcount = 0 %}
+{% for post in site.posts %}
+{% if post.categories contains "personal" %}
+{% if pcount < 5 %}
+<li class="recent">{{ post.date | date: "%Y-%m-%d" }} &raquo;<br><a href="{{ post.url }}">{{ post.title }}</a></li>
+{% assign pcount = pcount | plus: 1 %}
+{% endif %}
+{% endif %}
+{% endfor %}
+</ul>
+
 <p><a href="/">All posts</a><br>
 <a href="/bio.html">About</a><br>
 <a href="/feed.xml">RSS</a></p>
