--- a/page.css
+++ b/page.css
@@ -199,6 +199,12 @@ li.recent {
 	list-style-image: unset;
 }
 
+div.recent hr {
+	border: none;
+	border-top: 1px solid #ccc;
+	margin: 12px 0;
+}
+
 pre {
 	font-family: Courier, "Courier New", mono;
 	font-size: 12px;
