--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,16 +16,9 @@
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
 <a href="/">Home</a><br>
-<a href="/bio.html">Bio</a><br>
-<a href="/linuxperf.html">Linux Perf</a><br>
-<a href="/rcu.html">RCU</a><br>
-<a href="/tracing.html">Tracing</a><br>
-<a href="/schedulers.html">Schedulers</a><br>
-<a href="/memory-ordering.html">Memory Ordering</a><br>
-<a href="/gpu.html">GPU Drivers</a><br>
-<a href="/resources/">Talks</a><br>
-<a href="/personal.html">Personal Posts</a><br>
 <a href="/joel/">Resume</a><br>
+<a href="/technical.html">Technical Posts</a><br>
+<a href="/personal.html">Personal Posts</a><br>
 </div>
 
 <div class="recent">
