Update right sidebar: rename headers, split all posts links, remove About/RSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="recent">
-<p class="navhdr">Recent posts:</p>
+<p class="navhdr">Recent technical posts:</p>
 <ul>
 {% assign count = 0 %}
 {% for post in site.posts %}
@@ -37,7 +37,7 @@
 
 <hr>
 
-<p class="navhdr">Recent personal:</p>
+<p class="navhdr">Recent personal posts:</p>
 <ul>
 {% assign pcount = 0 %}
 {% for post in site.posts %}
@@ -52,9 +52,8 @@
 
 <hr>
 
-<p><a href="/">All posts</a><br>
-<a href="/bio.html">About</a><br>
-<a href="/feed.xml">RSS</a></p>
+<p><a href="/technical.html">All technical posts</a><br>
+<a href="/personal.html">All personal posts</a></p>
 </div>
 
 <div class="site">
